Task_5/nginx-services.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: my-namespace
  labels:
    app: front-end
    role: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
        role: front-end
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: my-namespace
  labels:
    app: front-end
    role: front-end
spec:
  selector:
    app: front-end
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-api
  namespace: my-namespace
  labels:
    app: back-end-api
    role: back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-end-api
  template:
    metadata:
      labels:
        app: back-end-api
        role: back-end-api
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-end-api
  namespace: my-namespace
  labels:
    app: back-end-api
    role: back-end-api
spec:
  selector:
    app: back-end-api
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end
  namespace: my-namespace
  labels:
    app: admin-front-end
    role: admin-front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-front-end
  template:
    metadata:
      labels:
        app: admin-front-end
        role: admin-front-end
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end
  namespace: my-namespace
  labels:
    app: admin-front-end
    role: admin-front-end
spec:
  selector:
    app: admin-front-end
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-back-end-api
  namespace: my-namespace
  labels:
    app: admin-back-end-api
    role: admin-back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-back-end-api
  template:
    metadata:
      labels:
        app: admin-back-end-api
        role: admin-back-end-api
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api
  namespace: my-namespace
  labels:
    app: admin-back-end-api
    role: admin-back-end-api
spec:
  selector:
    app: admin-back-end-api
  ports:
    - port: 80
      targetPort: 80
